--- a/cwa-project/dvc.yaml
+++ b/cwa-project/dvc.yaml
@@ -3,7 +3,9 @@ stages:
   compile_apply:
     cmd: . compile_apply.sh
     deps:
+      # The first page, i.e., 壹、綜合資料
       - apply_preface.pdf
+      # The rest pages, i.e., from 六、人力 to (三)行政管理費
       - apply_appendix.pdf
     outs:
       - project_plan.pdf
